fix spacing on select dropdown arrow

--- a/css/inner/edit-project-settings.less
+++ b/css/inner/edit-project-settings.less
@@ -713,10 +713,10 @@
       }
       i {
         &.fa-chevron-down {
-          right: 10%;
+          right: 8%;
           pointer-events: none;
           position: absolute;
-          top: 20%;
+          top: 24%;
           transition: color .3s ease-in-out;
         }
       }
